modify jvm